--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 actix-web = "3"
 actix-multipart = "0.3"
+async-std = "1.8"
 futures-util = "0.3"
 bytes="0.5.6"
 serde = "1.0.126"
