--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# Ignore rust build dir
 /target
+# Ignore prototyping dir
+/tmp
+
+# Ignore vim files
+# Copy of https://github.com/github/gitignore/blob/master/Global/Vim.gitignore
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+# Session
+Session.vim
+Sessionx.vim
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
