--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ md5 = "0.7.0"
 urlparse = "0.7.3"
 hex = "0.4.3"
 anki={path="anki/rslib"}
+clap="3.0.0-beta.5"
 [dependencies.rusqlite]
 version = "0.25.1"
 features = ["bundled"]
