--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ urlparse = "0.7.3"
 hex = "0.4.3"
 anki={path="anki/rslib"}
 clap="3.0.0-beta.5"
+lazy_static = "1.4.0"
 [dependencies.rusqlite]
 version = "0.25.1"
 features = ["bundled"]
