--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sha2 = "0.9.5"
 md5 = "0.7.0"
 urlparse = "0.7.3"
 hex = "0.4.3"
+clap="3.0.0-beta.5"
 anki={path="anki/rslib"}
 [dependencies.rusqlite]
 version = "0.25.1"
