--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,9 @@ sha2 = "0.9.5"
 md5 = "0.7.0"
 urlparse = "0.7.3"
 hex = "0.4.3"
-clap="3.0.0-beta.5"
 anki={path="anki/rslib"}
+clap="3.0.0-beta.5"
+lazy_static = "1.4.0"
 [dependencies.rusqlite]
 version = "0.25.1"
 features = ["bundled"]
