--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 license = "AGPL-3.0-or-later"
 documentation = "https://docs.rs/ankisyncd/"
 readme = "README.md"
-description="a person custom Anki(flash cards app) sync server"
+description="a personal Anki(flash-card app) sync server"
 keywords = ["Anki","actix-web","server"]
 repository = "https://github.com/ankicommunity/anki-sync-server-rs.git"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
