rustls as an optional feature generate diff conf file depending on state of rustls only enable rustls code related ssl can be compiled

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ keywords = ["Anki","actix-web","server"]
 repository = "https://github.com/ankicommunity/anki-sync-server-rs.git"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+build = "build.rs"
+
 [dependencies]
 thiserror = "1.0.30"
 actix-web = { version = "3", features=["rustls"]}
