--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,66 +1,30 @@
-on: [pull_request]
+name: Create Release Draft
 
-name: Continuous integration
+on:
+  workflow_dispatch:
+  push:
+    tags: ["[0-9]+.[0-9]+.[0-9]+*"]
 
 jobs:
-  ci:
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
-        style: [all, default, minimal]
-        rust:
-          - stable
-        include:
-          - style: all
-            flags: '--all-features'
-          - style: default
-            flags: ''
-          - style: minimal
-            flags: '--no-default-features'
-        exclude:
-          - platform: windows-latest
-            style: default
-          - platform: windows-latest
-            style: minimal
-          - platform: macos-latest
-            style: default
-          - platform: macos-latest
-            style: minimal
-
-    runs-on: ${{ matrix.platform }}
-
+  linux:
+    name: Build Linux
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
 
-      - name: Setup Rust toolchain
+      - name: Install libxcb
+        run: sudo apt-get install libxcb-composite0-dev
+
+      - name: Set up cargo
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           override: true
-          components: rustfmt, clippy
 
-      - name: Rustfmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-      - name: Clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          # args: --all ${{ matrix.flags }} -- -D warnings -D clippy::unwrap_used -A clippy::needless_collect
-
-      - name: Build Ankisyncd
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: ${{ matrix.flags }}
-
-      - name: Tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all ${{ matrix.flags }}
+          args: --release --all --features=extra
