--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,24 +8,18 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest, macos-latest, ubuntu-latest]
-        style: [all, default, minimal]
+        style: [minimal]
         rust:
           - stable
         include:
-          - style: all
-            flags: '--all-features'
-          - style: default
-            flags: ''
           - style: minimal
             flags: '--no-default-features'
         exclude:
           - platform: windows-latest
-            style: default
-          - platform: windows-latest
             style: minimal
           - platform: macos-latest
-            style: default
-          - platform: macos-latest
+            style: minimal
+          - platform: ubuntu-latest
             style: minimal
 
     runs-on: ${{ matrix.platform }}
@@ -55,16 +49,17 @@ jobs:
           sh ./scripts/clone_patch_anki
           ls anki
 
-      - name: Rustfmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
+      #commented code seems unnecessary ,done by pre-commit
+      # - name: Rustfmt
+      #   uses: actions-rs/cargo@v1
+      #   with:
+      #     command: fmt
           # args: --all -- --check
 
-      - name: Clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
+      # - name: Clippy
+      #   uses: actions-rs/cargo@v1
+      #   with:
+      #     command: clippy
           # args: --all ${{ matrix.flags }} -- -D warnings -D clippy::unwrap_used -A clippy::needless_collect
 
       - name: Build Ankisyncd
@@ -73,8 +68,8 @@ jobs:
           command: build
           # args: ${{ matrix.flags }}
 
-      - name: Tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+      # - name: Tests
+      #   uses: actions-rs/cargo@v1
+      #   with:
+      #     command: test
           # args: --all ${{ matrix.flags }}
