--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,24 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest, macos-latest, ubuntu-latest]
-        style: [minimal]
+        style: [all, default, minimal]
         rust:
           - stable
         include:
+          - style: all
+            flags: '--all-features'
+          - style: default
+            flags: ''
           - style: minimal
             flags: '--no-default-features'
         exclude:
           - platform: windows-latest
+            style: default
+          - platform: windows-latest
             style: minimal
           - platform: macos-latest
-            style: minimal
-          - platform: ubuntu-latest
+            style: default
+          - platform: macos-latest
             style: minimal
 
     runs-on: ${{ matrix.platform }}
@@ -49,7 +55,7 @@ jobs:
           sh ./scripts/clone_patch_anki
           ls anki
 
-      #commented code seems unnecessary ,done by pre-commit
+      #commented code seems unnecessary ,done by pre-com
       # - name: Rustfmt
       #   uses: actions-rs/cargo@v1
       #   with:
