comment line in gitignore to allow tags to be upload in anki/rslib/src/

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Sessionx.vim
 .netrwhist
 *~
 # Auto-generated tag files
-tags
+# this will prevent anki/rslib/src/tags from being uploaded if uncomment
+# tags
 # Persistent undo
 [._]*.un~
