--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,26 +7,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
+        platform: [macos-latest, ubuntu-latest]
         style: [all, default, minimal]
         rust:
           - stable
-        include:
-          - style: all
-            flags: '--all-features'
-          - style: default
-            flags: ''
-          - style: minimal
-            flags: '--no-default-features'
-        exclude:
-          - platform: windows-latest
-            style: default
-          - platform: windows-latest
-            style: minimal
-          - platform: macos-latest
-            style: default
-          - platform: macos-latest
-            style: minimal
+        
 
     runs-on: ${{ matrix.platform }}
 
@@ -55,27 +40,48 @@ jobs:
           sh ./scripts/clone_patch_anki
           ls anki
 
-      #commented code seems unnecessary ,done by pre-com
-      # - name: Rustfmt
-      #   uses: actions-rs/cargo@v1
-      #   with:
-      #     command: fmt
-          # args: --all -- --check
-
-      # - name: Clippy
-      #   uses: actions-rs/cargo@v1
-      #   with:
-      #     command: clippy
-          # args: --all ${{ matrix.flags }} -- -D warnings -D clippy::unwrap_used -A clippy::needless_collect
-
       - name: Build Ankisyncd
         uses: actions-rs/cargo@v1
         with:
           command: build
-          # args: ${{ matrix.flags }}
 
-      # - name: Tests
-      #   uses: actions-rs/cargo@v1
-      #   with:
-      #     command: test
-          # args: --all ${{ matrix.flags }}
+  # it is necessary to separate windows ,as patch file differ  
+  ci_windows:
+    name: ci_on_windows
+    runs-on: windows-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up cargo
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      
+      # clone and patch anki library  
+      - name: Clone patch Anki
+        run: |
+          ./scripts/clone_patch_anki.bat
+          ls anki
+
+       # set up and run pre-commit
+      - name: Run pre-commit
+        run: |
+          pip -V
+          pip install pre-commit
+          pre-commit --version
+          pre-commit run --all-files
+
+      
+      # run build script to build
+      - name: Build Ankisyncd
+        run: |
+          cargo build 
+          cargo build --features tls
+
+          
+
+
