add python version of clone_patch_anki

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,16 +37,19 @@ jobs:
           toolchain: ${{ matrix.rust }}
           override: true
           components: rustfmt, clippy
-          
-       # clone and patch anki library  
-      - name: Clone patch Anki
-        run: |
-          sh ./scripts/clone_patch_anki
-          ls anki
-          
-      # set up and run pre-commit pre-commit run --all-files
+
       - name: Set up python
         uses: actions/setup-python@v2
+
+      # clone and patch anki library  
+      # - name: Clone patch Anki
+      #   run: |
+      #     sh ./scripts/clone_patch_anki
+      - name: Clone patch Anki
+        run: |
+          python ./scripts/clone_patch_anki.py
+          
+      # set up and run pre-commit pre-commit run --all-files
       - name: run pre-commit
         uses: pre-commit/action@v2.0.3
      
