--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,12 +151,15 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      
+
+      - name: Set up python
+        uses: actions/setup-python@v2
+        
       # clone and patch anki library  
       - name: Clone patch Anki
         run: |
-          sh ./scripts/clone_patch_anki
-          ls anki
+          python ./scripts/clone_patch_anki.py
+     
 
       - name: Build
         uses: actions-rs/cargo@v1
