pass args to cargo in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
+          args: ${{ matrix.flags }}
 
   # it is necessary to separate windows ,as patch file differ  
   ci_windows:
