--- a/.cargo/config
+++ b/.cargo/config
@@ -17,11 +17,19 @@ rustflags = ["-C", "target-feature=+crt-static",
  "-C", "link-args=-static"]
 
 [target.armv7-unknown-linux-musleabihf]
-linker = "arm-linux-musleabihf-gcc"
+#linker = "arm-linux-musleabihf-gcc"
+linker = "arm-linux-musleabihf-ld"
 rustflags  = [
   "-C", "target-feature=+crt-static",
     "-C", "link-args=-static",
 ]
+
+[target.arm-unknown-linux-musleabihf]
+linker = "arm-linux-musleabihf-ld"
+ rustflags  = [
+   "-C", "target-feature=+crt-static",
+    "-C", "link-args=-static",
+ ]
 
 [target.x86_64-unknown-linux-musl]
 linker = "x86_64-linux-musl-gcc"
@@ -36,8 +44,3 @@ rustflags = ["-C", "target-feature=+crt-static",
 #[source.tuna]
 #registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
 
-
-#for linux cmd line use
-#[net]
-#retry = 2 # 失败 自动重试 次数
-#git-fetch-with-cli = true
