--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,6 @@ urlparse = "0.7.3"
 hex = "0.4.3"
 anki = {path="anki/rslib"}
 clap = { version = "3.1.3", features = ["cargo"] }
-[dependencies.rusqlite]
-version = "0.26"
-features = ["bundled"]
 
 [dependencies.rustls]
 optional = true
@@ -46,3 +43,18 @@ version = "0.20.4"
 [dependencies.rustls-pemfile]
 optional = true
 version = "0.3.0"
+
+[target.'cfg(not(arm))'.dependencies]
+rusqlite = {version = "0.26.2",features = ["bundled"]}
+
+# native build on host or docker
+[target.arm-unknown-linux-gnueabihf.dependencies]
+rusqlite = {version = "0.26.2",features = ["bundled"]}
+
+# native build on host or docker
+[target.armv7-unknown-linux-gnueabihf.dependencies]
+rusqlite = {version = "0.26.2",features = ["bundled"]}
+
+#use cross-compiled static sqlite3 library
+[target.arm-unknown-linux-musleabihf.dependencies]
+rusqlite = "0.26.2"
