--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ repository = "https://github.com/ankicommunity/anki-sync-server-rs.git"
 build = "build.rs"
 
 [features]
-tls = ["rustls", "rustls-pemfile"]
+tls = ["rustls", "rustls-pemfile", "actix-web/rustls"]
 
 [dependencies]
 thiserror = "1.0.30"
-actix-web = { version = "4.0.1", features = ["rustls"] }
+actix-web = { version = "4.0.1" }
 actix-multipart = "0.4.0"
 async-std = "1.10.0"
 futures-util = "0.3.21"
@@ -27,7 +27,6 @@ serde_derive = "1.0.136"
 serde_json = "1.0.79"
 flate2 = "1.0.22"
 env_logger = "0.9.0"
-config = "0.11.0"
 rand = "0.8.5"
 sha2 = "0.10.2"
 md5 = "0.7.0"
@@ -35,6 +34,8 @@ urlparse = "0.7.3"
 hex = "0.4.3"
 anki = {path="anki/rslib"}
 clap = { version = "3.1.3", features = ["cargo"] }
+toml = "0.5"
+
 
 [dependencies.rustls]
 optional = true
