--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -1,4 +1,4 @@
-# from https://github.com/marketplace/actions/docker-buildx
+# from https://github.com/docker/build-push-action
 name: builddocker
 
 on:
@@ -23,36 +23,25 @@ jobs:
       - name: run pre-commit
         uses: pre-commit/action@v2.0.3
 
-      -
-        name: Prepare
-        id: prepare
-        run: |
-          DOCKER_IMAGE=ankicommunity/anki-sync-server-rs
-          DOCKER_PLATFORMS=linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
-          TAGS="$TAGS --tag ${DOCKER_IMAGE}:latest"
-
-          echo ::set-output name=docker_image::${DOCKER_IMAGE}
-          echo ::set-output name=buildx_args::--platform ${DOCKER_PLATFORMS} \
-            --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
-            ${TAGS} --file ./Dockerfile .
-      -
-        name: Set up Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
-      -
-        name: Docker Buildx (build)
-        run: |
-          docker buildx build --output "type=image,push=false" ${{ steps.prepare.outputs.buildx_args }}
+       # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+  
       -
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       -
-        name: Docker Buildx (push)
-        run: |
-          docker buildx build --output "type=image,push=true" ${{ steps.prepare.outputs.buildx_args }}
-      -
-        name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:latest
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/anki-sync-server-rs:latest
