--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ankisyncd"
 version = "0.2.0"
 edition = "2018"
 license = "AGPL-3.0-or-later"
-documentation = "https://docs.rs/ankisyncd/"
+# documentation = "https://docs.rs/ankisyncd/"
 readme = "README.md"
 description="a personal Anki(flash-card app) sync server"
 keywords = ["Anki","actix-web","server"]
